--- a/console/pom.xml
+++ b/console/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.savara.tools.web</groupId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   <groupId>org.savara.tools.web</groupId>
   <artifactId>console</artifactId>
   <packaging>war</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>SAVARA Web Tools :: Console</name>
 
   <properties>
@@ -26,20 +26,34 @@
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-servlet</artifactId>
-      <version>${gwt.version}</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
-      <version>${gwt.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.smartgwt</groupId>
       <artifactId>smartgwt</artifactId>
       <version>${smartgwt.version}</version>
-    </dependency>  
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gwt.inject</groupId>
+      <artifactId>gin</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.gwtplatform</groupId>
+      <artifactId>gwtp-all</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.mycila.com.google.inject.extensions</groupId>
+      <artifactId>guice-assisted-inject</artifactId>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -54,6 +68,36 @@
 
     <plugins>
 
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.2</version>
+            <executions>
+                <execution>
+                    <id>generate-version-class</id>
+                    <phase>generate-sources</phase>
+                    <goals>
+                        <goal>run</goal>
+                    </goals>
+                    <configuration>
+                        <tasks>
+                            <ant antfile="../scripts/antrun-version.xml" inheritAll="false" inheritRefs="false">
+                                <property name="version" value="${project.version}"/>
+                                <property name="build.user" value="${user.name}"/>
+                                <property name="src.dir" value="${project.build.directory}/generated-sources" />
+                            </ant>
+                        </tasks>
+                        <sourceRoot>
+                            ${project.build.directory}/generated-sources
+                        </sourceRoot>
+                    </configuration>
+                </execution>
+
+
+            </executions>
+        </plugin>
+
+
       <!-- GWT Maven Plugin -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -63,7 +107,6 @@
           <execution>
             <goals>
               <goal>compile</goal>
-			  <goal>generateAsync</goal>
             </goals>
           </execution>
         </executions>
