--- a/console/pom.xml
+++ b/console/pom.xml
@@ -55,6 +55,10 @@
       <artifactId>guice-assisted-inject</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.code.gwt-log</groupId>
+      <artifactId>gwt-log</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
@@ -65,7 +69,7 @@
   <build>
     <!-- Generate compiled stuff in the folder used for developing mode -->
     <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
-
+    <finalName>savara-console</finalName>
     <plugins>
 
         <plugin>
