* Added activity model in client side, currently jaxb annotated model class can not be reused in GWT for couple reasons: 1. the XMLGregorianCalendar class can not be translated. 2. seems having complaint about the java.xml.QName stuff, due to 1st problem, haven't seen this detail info yet.

--- a/console/src/main/resources/gwt-proxy.properties
+++ b/console/src/main/resources/gwt-proxy.properties
@@ -17,6 +17,6 @@
 # MA  02110-1301, USA.
 #
 
-service.id=console-server
-service.url=http://localhost:8080/savara-console-server
+service.id=default
+service.url=http://127.0.0.1:8081
 service.passthrough=true
