--- a/console/pom.xml
+++ b/console/pom.xml
@@ -20,6 +20,7 @@
     <maven.compiler.target>1.5</maven.compiler.target>
     <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 	<smartgwt.version>2.4</smartgwt.version>
+    <restygwt.version>1.1</restygwt.version>
   </properties>
 
   <dependencies>
@@ -57,6 +58,22 @@
     <dependency>
       <groupId>com.google.code.gwt-log</groupId>
       <artifactId>gwt-log</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.fusesource.restygwt</groupId>
+      <artifactId>restygwt</artifactId>
+      <version>${restygwt.version}</version>
+    </dependency>
+    <dependency>
+       <groupId>javax.ws.rs</groupId>
+       <artifactId>jsr311-api</artifactId>
+       <version>1.1</version>
+    </dependency>
+    <dependency>
+       <groupId>org.codehaus.jackson</groupId>
+       <artifactId>jackson-mapper-asl</artifactId>
+       <type>jar</type>
+       <version>1.7.1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
