--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,12 @@
             <url>http://www.smartclient.com/maven2</url>
             <layout>default</layout>
         </repository>
+        <repository>
+            <id>fusesource</id>
+            <name>fusesource Repository</name>
+            <url>http://repo.fusesource.com/nexus/content/repositories/public/</url>
+            <layout>default</layout>
+        </repository>
     </repositories>
 
     <pluginRepositories>
