--- a/pom.xml
+++ b/pom.xml
@@ -162,10 +162,9 @@
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+				<version>2.5</version>
                 <configuration>
-                    <skipTests>true</skipTests>
                     <failIfNoTests>false</failIfNoTests>
-                    <trimStackTrace>false</trimStackTrace>
                     <systemProperties>
                         <property>
                             <name>log4j.output.dir</name>
@@ -176,6 +175,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
@@ -198,6 +198,7 @@
 
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
