* Updated the Activity model for the changed activity schema.

--- a/console/pom.xml
+++ b/console/pom.xml
@@ -35,7 +35,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.smartgwt</groupId>
+      <groupId>smartgwt</groupId>
       <artifactId>smartgwt</artifactId>
       <version>${smartgwt.version}</version>
     </dependency>
